--- a/environment.yml
+++ b/environment.yml
@@ -114,22 +114,37 @@ dependencies:
   - pip:
     - absl-py==0.4.1
     - astor==0.7.1
+    - backcall==0.1.0
     - cython==0.28.5
+    - decorator==4.3.0
     - gast==0.2.0
     - grpcio==1.14.2
     - h5py==2.8.0
+    - ipython==6.5.0
+    - ipython-genutils==0.2.0
+    - jedi==0.12.1
     - keras==2.2.2
     - keras-applications==1.0.4
     - keras-preprocessing==1.0.2
     - markdown==2.6.11
     - opencv-python==3.4.2.17
+    - parso==0.3.1
+    - pexpect==4.6.0
+    - pickleshare==0.7.4
+    - prompt-toolkit==1.0.15
     - protobuf==3.6.1
+    - ptyprocess==0.6.0
+    - pygments==2.2.0
     - pyyaml==3.13
     - scipy==1.1.0
+    - seaborn==0.9.0
+    - simplegeneric==0.8.1
     - tensorboard==1.10.0
     - tensorflow==1.10.1
     - termcolor==1.1.0
     - tifffile==0.15.1
+    - traitlets==4.3.2
+    - wcwidth==0.1.7
     - werkzeug==0.14.1
 prefix: /home/dlahtou/anaconda3/envs/satenv2
 
